Fixed all text being centered on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,10 @@ body {
   float: right;
 }
 
+p {
+  /*text-align: justify; */
+}
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 900px) {
   .column, nav, header {
@@ -197,7 +201,6 @@ body {
       margin: auto;
       width: 100%;
       padding: 0;
-      text-align: center;
     }
 
     body {
